[package]
name = "spritefusion-pixel-snapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
image = { version = "0.24", default-features = false, features = ["png", "jpeg", "bmp", "gif", "tiff", "webp"] }
clap = { version = "4.4", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
kmeans_colors = { version = "0.6", features = ["palette_color"] }
palette = { version = "0.7", features = ["std"] }
phf = { version = "0.11", features = ["macros"] }
wide = "0.7"
png = "0.18.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = { version = "0.1" }
rayon = "1.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
